tests/semantic/valid/20_r3_function_block_let.hulk
function f() => let x = 1 in x;

print(f());
