tests/semantic/invalid/09_r2_self_in_initializer.hulk
let x = x in print(x);
